# Pulse-HMS

./: .gitignore  .replit  Documentation.md  LICENSE  README.md  ai_services.py  app.py  auth.py  config.example.py  config.py  models.py  pyproject.toml  qr_service.py  render.yaml  replit.md  requirements-dev.txt  requirements-minimal.txt  requirements.txt  routes.py  security.py  utils.py
attached_assets/: Pasted-You-are-my-technical-co-pilot-for-building-a-modern-Hospital-Management-System-HMS-called-Pulse-H-1753766895916_1753766895921.txt
instance/: pulse_hms.db
static/: sw.js
static/audio/: README.md
static/css/: critical.css  style.css
static/js/: main.js  notifications.js  offline.js  preloader.js  sound-system.js
templates/: analytics.html  appointments.html  base.html  create_appointment.html  create_patient.html  dashboard.html  login.html  patient_access.html  patient_dashboard.html  patient_detail.html  patient_portal.html  patients.html  print_layout.html  qr_checkin.html  receipt.html  sound-test.html
