[project]
name = "pulse-hms"
version = "1.0.0"
description = "Pulse HMS - Hospital Management System"
requires-python = ">=3.11"
dependencies = [
    "Flask==2.3.3",
    "Werkzeug==2.3.7",
    "Flask-SQLAlchemy==3.0.5",
    "SQLAlchemy==2.0.21",
    "Flask-Login==0.6.3",
    "Flask-WTF==1.1.1",
    "WTForms==3.0.1",
    "PyJWT==2.8.0",
    "cryptography==41.0.7",
    "google-generativeai==0.3.2",
    "openai==1.3.7",
    "qrcode[pil]==7.4.2",
    "Pillow==10.2.0",
    "pandas==2.1.4",
    "numpy==1.26.2",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "python-dotenv==1.0.0",
    "Flask-Migrate==4.0.5",
    "pytest==7.4.3",
    "pytest-flask==1.3.0",
    "gunicorn==21.2.0",
    "Flask-Compress==1.14",
    "Flask-CORS==4.0.0",
    "Flask-Limiter==3.5.0",
    "Flask-Talisman==1.1.0",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "python-magic==0.4.27",
    "python-decouple==3.8",
]
